--- a/conda_env.yml
+++ b/conda_env.yml
@@ -1,8 +1,8 @@
-name: drqv2
+name: link_ai_olympic
 channels:
   - defaults
 dependencies:
-  - python=3.8
+  - python=3.10
   - pip=21.1.3
   - numpy=1.19.2
   - absl-py=0.13.0
@@ -14,7 +14,7 @@ dependencies:
   - pytorch::torchvision
   - pytorch::torchaudio
   - pip:
-    - termcolor==1.1.0
+    - termcolor
     - git+git://github.com/deepmind/dm_control.git
     - tb-nightly
     - imageio==2.9.0
