--- a/cfgs/config.template.yaml
+++ b/cfgs/config.template.yaml
@@ -1,6 +1,6 @@
 defaults:
   - _self_
-  - task@_global_: quadruped_walk
+  - task@_global_: cartpole_balance
   - override hydra/launcher: submitit_local
 
 # task settings
@@ -21,7 +21,7 @@ nstep: 3
 batch_size: 256
 # misc
 seed: 1
-device: cpu
+device: cuda
 save_video: true
 save_train_video: false
 use_tb: true
